# Darkly-OLED

./: DarklyOLED-GTK.sh  README.md  install.sh  uninstall.sh
src/: CMakeLists.txt  DarkyConfig.cmake.in
src/desktoptheme/: CMakeLists.txt  metadata.json.in
src/flatpak/: org.kde.KStyle.Darky5.json  org.kde.KStyle.Darky6.10.json  org.kde.KStyle.Darky6.9.json
src/kdecoration/: CMakeLists.txt  Messages.sh  config-darky.h.cmake  darky.h  darky.json  darkybutton.cpp  darkybutton.h  darkydecoration.cpp  darkydecoration.h  darkyexceptionlist.cpp  darkyexceptionlist.h  darkysettings.kcfgc  darkysettingsdata.kcfg  darkysettingsprovider.cpp  darkysettingsprovider.h
src/kdecoration/config/: CMakeLists.txt  darkyconfigwidget.cpp  darkyconfigwidget.h  darkydecorationconfig.desktop  darkydetectwidget.cpp  darkydetectwidget.h  darkyexceptiondialog.cpp  darkyexceptiondialog.h  darkyexceptionlistwidget.cpp  darkyexceptionlistwidget.h  darkyexceptionmodel.cpp  darkyexceptionmodel.h  darkyitemmodel.cpp  darkyitemmodel.h  darkylistmodel.h  kcm_darkydecoration.cpp  kcm_darkydecoration.json
src/kdecoration/config/ui/: darkyconfigurationui.ui  darkydetectwidget.ui  darkyexceptiondialog.ui  darkyexceptionlistwidget.ui
src/kstyle/: CMakeLists.txt  config-darky.h.cmake  darky.h  darky.json  darky.kcfg  darky.themerc  darkyaddeventfilter.cpp  darkyaddeventfilter.h  darkyblurhelper.cpp  darkyblurhelper.h  darkyframeshadow.cpp  darkyframeshadow.h  darkyhelper.cpp  darkyhelper.h  darkymdiwindowshadow.cpp  darkymdiwindowshadow.h  darkymnemonics.cpp  darkymnemonics.h  darkypropertynames.cpp  darkypropertynames.h  darkyshadowhelper.cpp  darkyshadowhelper.h  darkysplitterproxy.cpp  darkysplitterproxy.h  darkystyle.cpp  darkystyle.h  darkystyleconfigdata.kcfgc  darkystyleplugin.cpp  darkystyleplugin.h  darkytileset.cpp  darkytileset.h  darkytoolsareamanager.cpp  darkytoolsareamanager.h  darkywindowmanager.cpp  darkywindowmanager.h
src/kstyle/animations/: darkyanimation.cpp  darkyanimation.h  darkyanimationdata.cpp  darkyanimationdata.h  darkyanimations.cpp  darkyanimations.h  darkybaseengine.cpp  darkybaseengine.h  darkybusyindicatordata.cpp  darkybusyindicatordata.h  darkybusyindicatorengine.cpp  darkybusyindicatorengine.h  darkydatamap.h  darkydialdata.cpp  darkydialdata.h  darkydialengine.cpp  darkydialengine.h  darkyenabledata.cpp  darkyenabledata.h  darkygenericdata.cpp  darkygenericdata.h  darkyheaderviewdata.cpp  darkyheaderviewdata.h  darkyheaderviewengine.cpp  darkyheaderviewengine.h  darkyscrollbardata.cpp  darkyscrollbardata.h  darkyscrollbarengine.cpp  darkyscrollbarengine.h  darkyspinboxdata.cpp  darkyspinboxdata.h  darkyspinboxengine.cpp  darkyspinboxengine.h  darkystackedwidgetdata.cpp  darkystackedwidgetdata.h  darkystackedwidgetengine.cpp  darkystackedwidgetengine.h  darkytabbardata.cpp  darkytabbardata.h  darkytabbarengine.cpp  (+11 more)
src/kstyle/config/: CMakeLists.txt  Messages.sh  darkystyleconfig.cpp  darkystyleconfig.h  darkystyleconfig.json  darkystyleconfigmodule.cpp  darkystyleconfigmodule.h  main.cpp
src/kstyle/config/ui/: darkystyleconfig.ui
src/kstyle/debug/: darkywidgetexplorer.cpp  darkywidgetexplorer.h
src/kstyle/tests/: CMakeLists.txt  blurhelper_test.cpp  dolphinviewopacity_test.cpp  styleconfig_test.cpp
src/libdarkycommon/: CMakeLists.txt  darkyboxshadowrenderer.cpp  darkyboxshadowrenderer.h
